# enkiTS

./: .travis.yml  CMakeLists.txt  License.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
example/: CompletionAction.cpp  CompletionAction_c.c  CustomAllocator.cpp  CustomAllocator_c.c  Dependencies.cpp  Dependencies_c.c  Example.cpp  ExampleBenchmark.cpp  ExampleUserThreads.cpp  Example_c.c  ExternalTaskThread.cpp  ExternalTaskThread_c.c  LambdaTask.cpp  ParallelSum.cpp  ParallelSumBenchmark.cpp  ParallelSum_c.c  PinnedTask.cpp  PinnedTask_c.c  Priorities.cpp  Priorities_c.c  TaskOverhead.cpp  TaskThroughput.cpp  TestAll.cpp  TestWaitforTask.cpp  Timer.h  UserThreads.cpp  WaitForNewPinnedTasks.cpp  WaitForNewPinnedTasks_c.c
src/: Atomics.h  LockLessMultiReadPipe.h  TaskScheduler.cpp  TaskScheduler.h  TaskScheduler_c.cpp  TaskScheduler_c.h  Threads.h
